# dai_assistant

./: .env.example  LICENSE  README.md  agents_config.yaml  pyproject.toml  setup.py
src/: .gitignore  __init__.py
src/agent_definition/: __init__.py  custom_agent.py
src/agent_runtime/: __init__.py  engine.py
src/cli/: __init__.py  main.py
src/dai_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dependency_graph/: __init__.py  executor.py
src/error_handling/: __init__.py  handler.py
src/knowledge/: __init__.py  context_manager.py
src/llm_connector/: __init__.py  base_provider.py  connector.py  exceptions.py  provider_factory.py
src/llm_connector/exceptions/: __init__.py
src/llm_connector/providers/: anthropic_provider.py  base.py  openai.py  openai_provider.py
src/orchestrator/: __init__.py  multi_agent_orchestrator.py
src/output/: __init__.py  generator.py
src/templates/: __init__.py  agent_templates.py
tests/: __init__.py  conftest.py  test_openai_provider.py
tests/test_modules/: __init__.py
